# goodfella-ai

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/goodfella/: __init__.py
src/goodfella/cli/: __init__.py  app.py  commands.py
src/goodfella/core/: __init__.py  config.py  constants.py
src/goodfella/knowledge/: __init__.py
src/goodfella/knowledge/anti_patterns/: anemic_domain.md  god_class.md  tight_coupling.md
src/goodfella/knowledge/rules/: clean_architecture.md  ddd.md  hexagonal.md  solid.md
src/goodfella/llm/: __init__.py
src/goodfella/rag/: __init__.py  chunker.py  sync.py
tests/: __init__.py  test_config.py
