[project]
name = "goodfella"
version = "0.1.1"
description = "Strict Pair Programmer CLI — AI-powered software architecture reviewer"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Bruno Saint Clair", email = "brunosaint.dev@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["ai", "cli", "pair-programming", "rag", "architecture", "llm", "goodfella"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-anthropic>=0.3",
    "chromadb>=0.5",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "questionary>=2.1.1",
]

[project.urls]
Homepage = "https://github.com/BrunoSaintClair/goodfella"
Repository = "https://github.com/BrunoSaintClair/goodfella.git"
"Bug Tracker" = "https://github.com/BrunoSaintClair/goodfella/issues"

[project.scripts]
goodfella = "goodfella.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/goodfella"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["pytest>=8.0.0"]
